tests/fixtures/rustc-diag.raw.txt
error[E0308]: mismatched types
  --> src/main.rs:10:5
   |
10 |     let x: i32 = "hello";
   |            ---   ^^^^^^^ expected `i32`, found `&str`
   |            |
   |            expected due to this
   |
   = note: expected type `i32`
              found type `&str`
   = help: consider using `.parse()` to convert the `&str` to `i32`

warning[unused_variables]: unused variable: `y`
  --> src/main.rs:15:9
   |
15 |     let y = 42;
   |         ^ help: if this is intentional, prefix it with an underscore: `_y`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0425]: cannot find value `z` in this scope
  --> src/lib.rs:22:14
   |
22 |     println!("{}", z);
   |                    ^ not found in this scope
   |
   = help: consider importing this value

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
